@@ -5,15 +5,11 @@
 # https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
 # Release       Puppet   Ruby   EOL
-# SIMP 6.2      4.10     2.1.9  TBD
-# PE 2016.4     4.10     2.1.9  2018-12-31 (LTS)
-# PE 2017.3     5.3      2.4.4  2018-12-31
-# SIMP 6.3      5.5      2.4.4  TBD***
-# PE 2018.1     5.5      2.4.4  2020-05 (LTS)***
+# SIMP 6.3      5.5.10   2.4.5  TBD***
+# PE 2018.1.7   5.5.10   2.4.5  2020-05 (LTS)***
 # PE 2019.0     6.0      2.5.1  2019-08-31^^^
 #
 # *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
-# ^^^ = SIMP doesn't support 6 yet; tests are info-only and allowed to fail
 
 ---
 language: ruby
@@ -38,19 +34,17 @@ addons:
 
 before_install:
   - rm -f Gemfile.lock
+  - gem install -v '~> 1.17' bundler
 
 global:
   - STRICT_VARIABLES=yes
 
 jobs:
-  allow_failures:
-    - name: 'Latest Puppet 6.x (allowed to fail)'
-
   include:
     - stage: check
       name: 'Syntax, style, and validation checks'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5"
+      rvm: 2.4.5
+      env: PUPPET_VERSION="~> 5.5"
       script:
         - bundle exec rake check:dot_underscore
         - bundle exec rake check:test_file
@@ -62,42 +56,23 @@ jobs:
         - bundle exec puppet module build
 
     - stage: spec
-      name: 'Puppet 4.10 (SIMP 6.2, PE 2016.4)'
-      rvm: 2.1.9
-      env: PUPPET_VERSION="~> 4.10.0"
+      rvm: 2.4.5
+      name: 'Puppet 5.5.10 (SIMP 6.3, PE 2018.1)'
+      env: PUPPET_VERSION="5.5.10"
       script:
-        - bundle exec rake spec
+        - bundle exec rake spec_parallel
 
     - stage: spec
-      name: 'Puppet 5.3 (PE 2017.3)'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5.3.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      rvm: 2.4.4
-      name: 'Puppet 5.5 (SIMP 6.3, PE 2018.1)'
-      env: PUPPET_VERSION="~> 5.5.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      name: 'Latest Puppet 5.x'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      name: 'Latest Puppet 6.x (allowed to fail)'
+      name: 'Latest Puppet 6.x'
       rvm: 2.5.1
-      env: PUPPET_VERSION="~> 6.0"
+      env: PUPPET_VERSION="~> 6"
       script:
-        - bundle exec rake spec
+        - bundle exec rake spec_parallel
 
+    # Uncomment the following for deployment tasks and set 'secure' in both
+    # sections appropriately
     - stage: deploy
-      rvm: 2.4.4
+      rvm: 2.4.5
       script:
         - true
       before_deploy:
@@ -106,7 +81,7 @@ jobs:
       deploy:
         - provider: releases
           api_key:
-            secure: "g+hB0kQPGYD8rXZS5G+16fQYnzeqiWpRUv1kDjWCOKUy73l6WJGR3ugOPE7or7e7eOQXNZVWRLJc//LTVOp4DqF/XlhURMFmglRcdBmIrojqqXS/FPeR22Y9KMpYWYpJZVJvB4Rz8y5vgV7Y6Xy/O60Dh9yxU4c4jtlgclSpVKxPT2wmbde5OjJJxgrPs7G41yf1rscNzQYCBOKZPj5R8vOZR6LXJPQGbgjfY96YCd6NNjyKd6Esu7ygcmz23Tsq6bXVda4F0zJXFNW3DQYvXP1mOIyPeGDOGi2sdkrWFs7Y+3m6tCiFYiTSrv/2ndJVbRoHNurZn7/TCn+ruL8/onowaymnWOvvS35MBAvrmY3ImIvarme0uxTmmXKSM5kYL2e+BXW21RNlGm+iuQaLqtRPucfkeii00JM88ZXRn1jcyiBzfq3ngrpIPOM14Gmc0NmpPd5KOE329HUZcQdBcwlmCgTf0fzdGdXcvTpkPxuPUtQty+bTJtcy8W/UVzxTh8kDo40Rqfzla9/J7qY7eXaNn2aC9W6eSsKXyavuyYt6BFzviCtcDitCtFDFc6BHNDGElJka0qxDNV5Tduby7dPzzBMxyX2NR/hSmUss05gunCegeGFIrXc0X+8H5ILXaNp7aoWHHN8aeebmoFrZyOdoa/TeDysWrFQUtbdhoFk="
+            secure: "CHANGE_SECURE"
           skip_cleanup: true
           on:
             tags: true
@@ -114,8 +89,7 @@ jobs:
         - provider: puppetforge
           user: simp
           password:
-            secure: "lH1yQV/14m3cuREsB+HN+0ORnJ4qpkeKZ5OA0t8bWr0YmyoDPjhr+CiRTOvlDuzJaxRsBW76T/gzKhTSyUrYVpKhAFHpYqjBCWuqdK6QRYl4rV5zhoTnAZ5HorWgDZ9bBewzEjXTUitClfsWvO5Zo7Lnv2oThVRZbVi+xsIXNzisUFhHFZ2E0KniLm80pg3jRwk+nDUpTGVlfe2G57sPofkwYDEw2hbqs0DyaO60+wrwISUjOQqIbcprLnxGQPYBgwefxkjHyu4rV/L3nNlN/m2aYlo0WQJJN6hodIlju8mk87bFr1TRUmxAgsLTcRcw2lxfNh+m0wWr4x/hihmTi4IiMeqHHEsPPrLugv014LvHd/BBA7Smn9Utq0Qep9Ulq29MPeN49DrcA6F7zBpVzn1a77B47pV5m8IUM9CUpFs6/cXCTmK2Q147chwMT5UbbYAqoSInhlVSvelPhbYPHG1Y7KwNgtuylVer0Y4mWDxoR4Uc6A76BRp6itQ4H3XybpeVBU7qxc+/porwqlzvP5FeH0ZdzweBmrptPslfKs8JG54Qlfr9YgMBwIE3e6x0NGndCypp1wOtFmFC4nfS2iHKq3P8dU5nAuaH8yZFKGwn429LuHXqei/SiMhe5BRv9rWG+LBKX6hP0HuGmYK5Z4aJIvBDAbkusD/7QkuIf8s="
+            secure: "CHANGE_PASSWORD"
           on:
             tags: true
-            rvm: 2.4.4
             condition: '($SKIP_FORGE_PUBLISH != true)'
